--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Exclusivamente en tu primera compra.</p>
 				<div class="col-md-4 fh5co-widget">
 					<h3>Misión Empresarial</h3>
 					<p>Nuestra misión es transformar tantas vidas como sea posible, y hacer de cada cliente un amigo. Como equipo, nuestro compromiso es ayudar a todos a lograr hacer realidad sus sueños de toda la vida, y también aportarles nuestras sugerencias. Creemos en el poder del deseo, en el descubrimiento, en la aventura y en el modo de vida sustentablentable.</p>
-					<p><a href="#">Saber más</a></p>
+					
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
@@ -471,8 +471,8 @@ Exclusivamente en tu primera compra.</p>
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2019 Eduardo Robles Espinosa, Todos los Derechos Reservados.</small> 
+						<small class="block">Designed by ERE® </small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
