--- a/about.html
+++ b/about.html
@@ -107,8 +107,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>About Us</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h1>Nosotros</h1>
+							<h2>Una atmósfera agradable en todo lo que emprendemos <a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec.co</a></h2>
 						</div>
 					</div>
 				</div>
