--- a/about.html
+++ b/about.html
@@ -126,8 +126,9 @@
 					<div class="col-md-6 col-md-pull-1">
 						<div class="desc">
 							<h3>History</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex sunt ea praesentium expedita numquam?</p> 
-							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt perferendis quae amet deserunt eum labore quidem minima.</p>
+							<p>Todo empezó con la búsqueda del bienestar. Hace más de cuarenta años, científicos de Montreal, Canadá, descubrieron la función de un suero aislado de proteína especialmente preparado (ahora conocido como el famoso Immunocal). Para mediados de los años 1990, dichos científicos (que conocerás en la página 4) se asociaron con los empresarios veteranos en marketing en red, Chuck Roberts, Dieter Beer y John Molson, miembro de la célebre familia canadiense Molson, para fundar la empresa que ahora el mundo conoce como Immunotec.
+</p> 
+							<p></p>
 						</div>
 					</div>
 				</div>
