--- a/about.html
+++ b/about.html
@@ -125,8 +125,8 @@
 					</div>
 					<div class="col-md-6 col-md-pull-1">
 						<div class="desc">
-							<h3>History</h3>
-							<p>Todo empezó con la búsqueda del bienestar. Hace más de cuarenta años, científicos de Montreal, Canadá, descubrieron la función de un suero aislado de proteína especialmente preparado (ahora conocido como el famoso Immunocal). Para mediados de los años 1990, dichos científicos (que conocerás en la página 4) se asociaron con los empresarios veteranos en marketing en red, Chuck Roberts, Dieter Beer y John Molson, miembro de la célebre familia canadiense Molson, para fundar la empresa que ahora el mundo conoce como Immunotec.
+							<h3>Un breve recuento</h3>
+							<p>Todo empezó con la búsqueda del bienestar. Hace más de cuarenta años, científicos de Montreal, Canadá, descubrieron la función de un suero aislado de proteína especialmente preparado (ahora conocido como el famoso Immunocal). Para mediados de los años 1990, dichos científicos se asociaron con los empresarios veteranos en marketing en red, Chuck Roberts, Dieter Beer y John Molson, miembro de la célebre familia canadiense Molson, para fundar la empresa que ahora el mundo conoce como Immunotec.
 </p> 
 							<p></p>
 						</div>
@@ -135,16 +135,16 @@
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Meet Our Staff</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Conoce parte del equipo</h2>
+					<p>El modelo de negocios de Immunotec canaliza los bienes al consumidor a través de una red de Consultores independientes. Reducir los costos que normalmente se pagan a un "intermediario" tradicional, como una tienda, se traduce en un mayor potencial de ingresos para los Consultores.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person1.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
-						<h3>Jean Smith</h3>
-						<strong class="role">Web Designer</strong>
+						<h3>Andres Corona</h3>
+						<strong class="role">Consultor Independiente</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -157,8 +157,8 @@
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person2.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
-						<h3>Hush Raven</h3>
-						<strong class="role">Front-end Developer</strong>
+						<h3>Tania Vilchis</h3>
+						<strong class="role">Consultor Independiente</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
@@ -171,8 +171,8 @@
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person3.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
-						<h3>Alex King</h3>
-						<strong class="role">Back-end Developer</strong>
+						<h3>Alenjandra Martínez</h3>
+						<strong class="role">Consultor Independiente</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
