--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person1.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
-						<h3>Andres Corona</h3>
+						<h3>Andrés Corona</h3>
 						<strong class="role">Consultor Independiente</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 						<ul class="fh5co-social-icons">
@@ -157,7 +157,7 @@
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person2.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
-						<h3>Tania Vilchis</h3>
+						<h3>Tania Vílchis</h3>
 						<strong class="role">Consultor Independiente</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 						<ul class="fh5co-social-icons">
