--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Nosotros</h1>
-							<h2>Una atmósfera agradable en todo lo que emprendemos <a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec.co</a></h2>
+							<h2>Una atmósfera agradable en todo lo que emprendemos <a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec®</a></h2>
 						</div>
 					</div>
 				</div>
@@ -191,22 +191,18 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Newsletter</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>Regístrate al Newsletter y entérate de las promociones y nuevos productos antes que nadie.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
-					<form class="form-inline">
-						<div class="col-md-6 col-sm-6">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">Subscribe</button>
-						</div>
-					</form>
+					<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+<script>
+  hbspt.forms.create({
+	portalId: "5491094",
+	formId: "5952d80f-003c-4a77-8fc8-5cacb03387ef"
+});
+</script>
 				</div>
 			</div>
 		</div>
@@ -216,8 +212,8 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
-					<h3>The Company</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h3>Misión Empresarial</h3>
+					<p>Nuestra misión es transformar tantas vidas como sea posible, y hacer de cada cliente un amigo. Como equipo, nuestro compromiso es ayudar a todos a lograr hacer realidad sus sueños de toda la vida, y también aportarles nuestras sugerencias. Creemos en el poder del deseo, en el descubrimiento, en la aventura y en el modo de vida sustentablentable.</p>
 					<p><a href="#">Learn More</a></p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
@@ -254,8 +250,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2019 Eduardo Robles Espinosa, Todos los derechos reservsdos.</small> 
+						<small class="block">Designed by ERE®></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
