--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
 						<img src="images/person1.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
 						<h3>Andrés Corona</h3>
 						<strong class="role">Consultor Independiente</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<p>Hace 6 años me invitaron a participar en un negocio multinivel su nombre me parecia muy extraño, sin embargo nunca me imagine llegar tan lejos; hoy soy un diamante que jamas imaginé.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -159,7 +159,7 @@
 						<img src="images/person2.png" alt="Free HTML5 Templates by FreeHTML5.co">
 						<h3>Tania Vílchis</h3>
 						<strong class="role">Consultor Independiente</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<p>Para ser sincera no recuerdo el nombre de la persona que me explico como funcionan las ventas multinivel, pero estoy agradecida por haberlo hecho.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -173,7 +173,7 @@
 						<img src="images/person3.jpg" alt="Free HTML5 Templates by FreeHTML5.co">
 						<h3>Montserrat Martínez</h3>
 						<strong class="role">Consultor Independiente</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<p>Al principio compre un paquete de inicio con la intención de ayudar a mi padre que sufria de pie diabetico, cuando iniciamos el tratamiento no sucedia nada, hasta que con el tiempo cicatrizaron sus heridas y fue en ese momento que decidi ser parte de este exclusivo grupo.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
