--- a/about.html
+++ b/about.html
@@ -218,31 +218,31 @@
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company">Compañia</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/Contact">Servicio al Cliente</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/Contact">Contacto</a></li>
+						<li><a href="https://media.immunotec.com/SP/MX/terms-of-sale-MX.pdf">Terminos y Condiciones</a></li>
+						
 					</ul>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/products">Tienda</a></li>
+						<li><a href="https://media.immunotec.com/SP/privacy-policy-SP.pdf">Politicas de Privacidad</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/newsroom">Sala de Prensa</a></li>
+						<li><a href="https://media.immunotec.com/SP/MX/terms-of-sale-MX.pdf">Términos de Venta</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Science">Immunotec® Ciencia</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/sports_nutrition">Nutrición Deportiva</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/videos">Biblioteca de Videos</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/newsroom">Noticias</a></li>
+						<li><a href="https://media.immunotec.com/EN/CA/productCatalogue.pdf">Catálogo de Productos</a></li>
+						<li><a href="https://media.immunotec.com/SP/MX/notice-of-privacy-MX.pdf">Aviso de Privacidad</a></li>
 					</ul>
 				</div>
 			</div>
