--- a/services.html
+++ b/services.html
@@ -107,8 +107,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Services</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h1>Servicios</h1>
+							<h2>Un compromiso para brindar un servicio excelente, buscando siempre superar las expectativas <a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec®</a></h2>
 						</div>
 					</div>
 				</div>
@@ -212,9 +212,9 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
-					<h3>The Company</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
+					<h3>Misión Empresarial</h3>
+					<p>Nuestra misión es transformar tantas vidas como sea posible, y hacer de cada cliente un amigo. Como equipo, nuestro compromiso es ayudar a todos a lograr hacer realidad sus sueños de toda la vida, y también aportarles nuestras sugerencias. Creemos en el poder del deseo, en el descubrimiento, en la aventura y en el modo de vida sustentablentable.</p>
+					
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
@@ -250,8 +250,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2019 Eduardo Robles Espinosa Todos los Derechos Reservados.</small> 
+						<small class="block">Designed by ERE®</small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
