--- a/work.html
+++ b/work.html
@@ -106,8 +106,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Project</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h1>El proyecto</h1>
+							<h2>Un ambiente de trabajo basado en el trabajo de equipo y el logro de metas compartidas <a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec®</a></h2>
 						</div>
 					</div>
 				</div>
