--- a/work.html
+++ b/work.html
@@ -119,8 +119,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Finished Project</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Productos de calidad, excelentes oportunidades negocios</h2>
+					<p>El modelo de negocios de Immunotec canaliza los bienes al consumidor a través de una red de Consultores independientes. Reducir los costos que normalmente se pagan a un "intermediario" tradicional, como una tienda, se traduce en un mayor potencial de ingresos para los Consultores.</p>
 				</div>
 			</div>
 			<div class="row">
