--- a/work.html
+++ b/work.html
@@ -119,7 +119,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Productos de calidad, excelentes oportunidades negocios</h2>
+					<h2>Productos de calidad, excelentes oportunidades de negocios</h2>
 					<p>El modelo de negocios de Immunotec canaliza los bienes al consumidor a través de una red de Consultores independientes. Reducir los costos que normalmente se pagan a un "intermediario" tradicional, como una tienda, se traduce en un mayor potencial de ingresos para los Consultores.</p>
 				</div>
 			</div>
@@ -266,31 +266,31 @@
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company">Compañia</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/Contact">Servicio al Cliente</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/Contact">Contacto</a></li>
+						<li><a href="https://media.immunotec.com/SP/MX/terms-of-sale-MX.pdf">Terminos y Condiciones</a></li>
+						
 					</ul>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/products">Tienda</a></li>
+						<li><a href="https://media.immunotec.com/SP/privacy-policy-SP.pdf">Politicas de Privacidad</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/newsroom">Sala de Prensa</a></li>
+						<li><a href="https://media.immunotec.com/SP/MX/terms-of-sale-MX.pdf">Términos de Venta</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Science">Immunotec® Ciencia</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Developers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/sports_nutrition">Nutrición Deportiva</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/videos">Biblioteca de Videos</a></li>
+						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/newsroom">Noticias</a></li>
+						<li><a href="https://media.immunotec.com/EN/CA/productCatalogue.pdf">Catálogo de Productos</a></li>
+						<li><a href="https://media.immunotec.com/SP/MX/notice-of-privacy-MX.pdf">Aviso de Privacidad</a></li>
 					</ul>
 				</div>
 			</div>
