--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Contacto</h1>
-							<h2>Una cultura que personifique integridad, genere respeto y refuerce la confianza<a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec®</a></h2>
+							<h2>Una cultura que personifique integridad, genere respeto y refuerce la confianza <a href="https://www.immunotec.com/eduardoroblesespinosa" target="_blank">Immunotec®</a></h2>
 						</div>
 					</div>
 				</div>
@@ -152,13 +152,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Newsletter</h2>
-					<p><script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-<script>
-  hbspt.forms.create({
-	portalId: "5491094",
-	formId: "473ba260-df86-419d-989b-838a02f2536e"
-});
-</script></p>
+					<p>Regístrate al Newsletter y entérate de las promociones y nuevos productos antes que nadie.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -217,8 +211,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2019 Eduardo Robles Espinosa. Todos los Derechos Reservados.</small> 
+						<small class="block">Designed by ERE®</small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
