--- a/contact.html
+++ b/contact.html
@@ -134,10 +134,10 @@
 					<div class="fh5co-contact-info">
 						<h3>Contact Information</h3>
 						<ul>
-							<li class="address">198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-							<li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-							<li class="url"><a href="http://FreeHTML5.co">FreeHTML5.co</a></li>
+							<li class="address">Tlalnepantla Estado de México</li>
+							<li class="phone"><a href="tel://1234567920">+ 55 4452 2975</a></li>
+							<li class="email"><a href="mailto:eduardoroblesespinosa@hotmail.com">eduardoroblesespinosa@hotmail.com</a></li>
+							<li class="url"><a href="https://www.immunotec.com/eduardoroblesespinosa">www.immunotec.com/eduardoroblesespinosa</a></li>
 						</ul>
 					</div>
 
@@ -175,7 +175,7 @@
 				<div class="col-md-4 fh5co-widget">
 					<h3>Misión Empresarial</h3>
 					<p>Nuestra misión es transformar tantas vidas como sea posible, y hacer de cada cliente un amigo. Como equipo, nuestro compromiso es ayudar a todos a lograr hacer realidad sus sueños de toda la vida, y también aportarles nuestras sugerencias. Creemos en el poder del deseo, en el descubrimiento, en la aventura y en el modo de vida sustentablentable.</p>
-					<p><a href="#">Learn More</a></p>
+					
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
