--- a/work.html
+++ b/work.html
@@ -70,28 +70,11 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown">
-							<a href="#">Tools</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li class="active"><a href="work.html">Work</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="active"><a href="index.html">Inicio</a></li>
+						<li><a href="about.html">Nosotros</a></li>
+						<li><a href="services.html">Servicios</a></li>
+						<li><a href="work.html">Proyecto</a></li>
+						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</div>
 			</div>
