--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							
 							<h2>Esta es la forma de pertenecer a la comunidad más exclusiva de <a href="https://www.immunotec.com/eduardoroblesespinosa">Immunotec®</a></h2>
-							<p><a href="#" class="btn btn-default">Bienvenido</a></p>
+							<p><a href="https://eduardoroblesespinosa.github.io/negocio/index.html#paso" class="btn btn-default">Paso a paso</a></p>
 						</div>
 					</div>
 				</div>
@@ -159,7 +159,7 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-feature-9">
 						<div class="row">
 							<div class="col-md-12 fh5co-heading animate-box">
-								<h2>Registro paso a paso</h2>
+								<h2 id="paso">Registro paso a paso</h2>
 								<p>Instrucciones para realizar el registro de nuevo Consultor Independiente Immunotec®</p>
 							</div>
 						</div>
