--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								<div class="desc">
 									<h3>Oportunidad</h3>
 									<p>Regístrate como Consultor Independiente y obten un 30% de descuento, tu propio centro de negocio con acceso a promociones exclusivas para consultores y los beneficios del plan de negocio de Immunotec.</p>
-									<p><a href="#" class="btn btn-primary">Saber más</a></p>
+									<p><a href="https://eduardoroblesespinosa.github.io/negocio/index.html#news" class="btn btn-primary">Saber más</a></p>
 								</div>
 							</div>
 						</div>
@@ -126,7 +126,7 @@
 									<h3>Consultor</h3>
 									<p>Además al registrarte como consultor tienes la oportunidad de por UNICA VEZ de adquirir un Paquete de Inicio, con un descuento especial de hasta el 50%. 
 Exclusivamente en tu primera compra.</p>
-									<p><a href="#" class="btn btn-primary">Saber más</a></p>
+									<p><a href="https://eduardoroblesespinosa.github.io/negocio/index.html#news" class="btn btn-primary">Saber más</a></p>
 								</div>
 							</div>
 						</div>
@@ -138,7 +138,7 @@ Exclusivamente en tu primera compra.</p>
 								<div class="desc">
 									<h3>Beneficios</h3>
 									<p>Obten un descuento de hasta un 50% sobre el precio al publico sugerido de los productos, dependiendo del paquete de inicio que elijas.</p>
-									<p><a href="#" class="btn btn-primary">Saber más</a></p>
+									<p><a href="https://eduardoroblesespinosa.github.io/negocio/index.html#news" class="btn btn-primary">Saber más</a></p>
 								</div>
 							</div>
 						</div>
@@ -394,7 +394,7 @@ Exclusivamente en tu primera compra.</p>
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Newsletter</h2>
+					<h2 id="news">Newsletter</h2>
 					<p>Regístrate al Newsletter y entérate de las promociones y nuevos productos antes que nadie.</p>
 				</div>
 			</div>
