--- a/work.html
+++ b/work.html
@@ -70,10 +70,10 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="index.html">Inicio</a></li>
+						<li><a href="index.html">Inicio</a></li>
 						<li><a href="about.html">Nosotros</a></li>
 						<li><a href="services.html">Servicios</a></li>
-						<li><a href="work.html">Proyecto</a></li>
+						<li class="active"><a href="work.html">Proyecto</a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</div>
