--- a/about.html
+++ b/about.html
@@ -129,12 +129,6 @@
 						<h3>Andrés Corona</h3>
 						<strong class="role">Consultor Independiente</strong>
 						<p>Hace 6 años me invitaron a participar en un negocio multinivel su nombre me parecia muy extraño, sin embargo nunca me imagine llegar tan lejos; hoy soy un diamante que jamas imaginé.</p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
@@ -142,13 +136,7 @@
 						<img src="images/person2.png" alt="Free HTML5 Templates by FreeHTML5.co">
 						<h3>Tania Vílchis</h3>
 						<strong class="role">Consultor Independiente</strong>
-						<p>Para ser sincera no recuerdo el nombre de la persona que me explico como funcionan las ventas multinivel, pero estoy agradecida por haberlo hecho.</p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
+						<p>Sinceramente no recuerdo el nombre de la persona que me explico como funcionan las ventas multinivel, pero estoy agradecida por haberlo hecho.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
@@ -157,12 +145,6 @@
 						<h3>Montserrat Martínez</h3>
 						<strong class="role">Consultor Independiente</strong>
 						<p>Al principio compre un paquete de inicio con la intención de ayudar a mi padre que sufria de pie diabetico, cuando iniciamos el tratamiento no sucedia nada, hasta que con el tiempo cicatrizaron sus heridas y fue en ese momento que decidi ser parte de este exclusivo grupo.</p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
