--- a/about.html
+++ b/about.html
@@ -220,10 +220,10 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://twitter.com/eduroes" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/eduardo.r.espinosa.9" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="https://eduardoroblesespinosa.github.io/profile/index.html" target="_blank"><i class="icon-dribbble"></i></a></li>
 						</ul>
 					</p>
 				</div>
