--- a/index.html
+++ b/index.html
@@ -441,13 +441,7 @@ Exclusivamente en tu primera compra.</p>
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/sports_nutrition">Nutrición Deportiva</a></li>
-						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/videos">Biblioteca de Videos</a></li>
-						<li><a href="https://www.immunotec.com/eduardoroblesespinosa/Company/newsroom">Noticias</a></li>
-						<li><a href="https://media.immunotec.com/EN/CA/productCatalogue.pdf">Catálogo de Productos</a></li>
-						<li><a href="https://media.immunotec.com/SP/MX/notice-of-privacy-MX.pdf">Aviso de Privacidad</a></li>
-					</ul>
+					<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="es_ES" data-type="vertical" data-theme="dark" data-vanity="eduardo-robles-espinosa-838b2538"><a class="LI-simple-link" href='https://mx.linkedin.com/in/eduardo-robles-espinosa-838b2538?trk=profile-badge'>Eduardo Robles Espinosa</a></div>
 				</div>
 			</div>
 
